--- a/Amazon_Web_Scraper_Project.ipynb
+++ b/Amazon_Web_Scraper_Project.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNwXN57DyF2Y6h37UO53C9z",
+      "authorship_tag": "ABX9TyPCzjHX3W9LNThuquG4pwGh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": 6,
       "metadata": {
         "id": "UGUdls7cQKen"
       },
@@ -62,9 +62,9 @@
         "soup2 = BeautifulSoup(soup1.prettify(), \"html.parser\")\n",
         "\n",
         "# Get the product title\n",
-        "title_tag = soup2.find(id='productTitle')\n",
-        "if title_tag:\n",
-        "    title = title_tag.get_text().strip()\n",
+        "title = soup2.find(id='productTitle')\n",
+        "if title:\n",
+        "    title = title.get_text().strip()\n",
         "    print(\"Title:\", title)\n",
         "else:\n",
         "    print(\"Product title not found\")\n",
@@ -91,9 +91,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "cfCNqM5T6Tr7",
-        "outputId": "7e68cc6c-3910-4a96-df93-2a59baebba67"
+        "outputId": "6ad8768f-e6dc-4215-9102-d5e8341a758d"
       },
-      "execution_count": 117,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -123,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "DXrX0JaiRsSi",
-        "outputId": "75b776a4-6c3e-4a95-8329-486b1f2d8641"
+        "outputId": "fef06533-c070-49f8-b727-c959202ed684"
       },
-      "execution_count": 118,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,9 +153,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-FsZkK-JYeFr",
-        "outputId": "1817f298-7d9f-43ce-bb84-fe2eec9c8323"
+        "outputId": "285b44d3-177f-4766-a296-78687351929d"
       },
-      "execution_count": 119,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -181,7 +181,7 @@
       "metadata": {
         "id": "8B7C4WUNWBrM"
       },
-      "execution_count": 120,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -197,9 +197,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5pBAKIgiYvmU",
-        "outputId": "d64b1443-c5ed-429f-9180-cf0dac1127d2"
+        "outputId": "3ff35bf2-64b2-40da-d0c2-1795deed1bad"
       },
-      "execution_count": 121,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -225,7 +225,7 @@
       "metadata": {
         "id": "uYpcMQB7ZWLs"
       },
-      "execution_count": 122,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -250,9 +250,9 @@
         "soup2 = BeautifulSoup(soup1.prettify(), \"html.parser\")\n",
         "\n",
         "# Get the product title\n",
-        "title_tag = soup2.find(id='productTitle')\n",
-        "if title_tag:\n",
-        "    title = title_tag.get_text().strip()\n",
+        "title = soup2.find(id='productTitle')\n",
+        "if title:\n",
+        "    title = title.get_text().strip()\n",
         "    print(\"Title:\", title)\n",
         "else:\n",
         "    print(\"Product title not found\")\n",
@@ -292,9 +292,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "U0CHuASCZ8Ed",
-        "outputId": "4aa7bd88-5d28-407d-b4d5-330c1fc4141a"
+        "outputId": "00f8aa03-6825-44e7-e127-b37c43840a5e"
       },
-      "execution_count": 123,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
